# WebCamProxy

./: CMakeLists.txt  LICENSE  README.md  config.example.yml  webcamproxy.service.in
src/: config.cpp  config.h  main.cpp  mjpeg.cpp  mjpeg.h  rotate.cpp  rotate.h  v4l2.cpp  v4l2.h
